--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "biome": "^0.3.3"
   },
   "dependencies": {
-    "globby": "^14.0.1"
+    "globby": "^14.0.1",
+    "jest": "^29.7.0",
+    "node-fetch": "^3.3.2"
   }
 }
