--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "author": "Andre Vale <andreventuravale@gmail.com>",
   "license": "ISC",
   "devDependencies": {
-    "biome": "^0.3.3",
+    "@biomejs/biome": "^1.6.4",
     "jest": "^29.7.0",
     "node-fetch": "^3.3.2"
   }
