biome.json jest-transformer.js jest-transformer.test.js tests/__snapshots__/sample.http.snap

--- a/biome.json
+++ b/biome.json
@@ -10,7 +10,7 @@
       "lineWidth": 80,
       "trailingComma": "none"
     },
-    "globals": ["describe", "expect", "test"]
+    "globals": ["describe", "expect", "it", "test"]
   },
   "linter": {
     "enabled": true,
