--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@biomejs/biome": "^1.6.4",
     "jest": "^29.7.0",
     "lodash-es": "^4.17.21",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
+    "testdouble": "^3.20.2"
   }
 }
