--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "lodash-es": "^4.17.21",
     "node-fetch": "^3.3.2",
     "testdouble": "^3.20.2"
+  },
+  "peerDependencies": {
+    "node-fetch": "^3.3.2"
   }
 }
