--- a/package.json
+++ b/package.json
@@ -10,7 +10,18 @@
     "test:watch": "NODE_OPTIONS=\"$NODE_OPTIONS --experimental-vm-modules\" npx jest --coverage --watch"
   },
   "author": "Andre Vale <andreventuravale@gmail.com>",
-  "license": "ISC",
+  "license": "MIT",
+  "categories": [
+    "Testing"
+  ],
+  "keywords": [
+    "jest",
+    "testing",
+    "http"
+  ],
+  "repository": {
+    "url": "https://github.com/andreventuravale/jest-dot-http-files"
+  },
   "devDependencies": {
     "@biomejs/biome": "^1.6.4",
     "jest": "^29.7.0",
