--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^1.6.4",
+    "date-fns": "^3.6.0",
     "jest": "^29.7.0",
     "lodash-es": "^4.17.21",
     "node-fetch": "^3.3.2",
