--- a/package.json
+++ b/package.json
@@ -11,8 +11,14 @@
   },
   "author": "Andre Vale <andreventuravale@gmail.com>",
   "license": "MIT",
-  "categories": ["Testing"],
-  "keywords": ["jest", "testing", "http"],
+  "categories": [
+    "Testing"
+  ],
+  "keywords": [
+    "jest",
+    "testing",
+    "http"
+  ],
   "repository": {
     "url": "https://github.com/andreventuravale/jest-dot-http-files"
   },
@@ -25,6 +31,7 @@
     "testdouble": "^3.20.2"
   },
   "peerDependencies": {
+    "date-fns": "^3.6.0",
     "lodash-es": "^4.17.21",
     "node-fetch": "^3.3.2"
   }
