--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "jest-dot-http-files",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "type": "module",
   "main": "./jest-transformer.js",
   "scripts": {
     "format": "clear && biome check --quote-style=single --semicolons=as-needed --arrow-parentheses=as-needed --json-formatter-indent-style=space --apply-unsafe .",
     "lint": "clear && biome lint .",
-    "test": "NODE_OPTIONS=\"$NODE_OPTIONS --experimental-vm-modules\" npx jest --coverage",
-    "test:watch": "NODE_OPTIONS=\"$NODE_OPTIONS --experimental-vm-modules\" npx jest --coverage --watch"
+    "test": "NODE_OPTIONS=\"$NODE_OPTIONS --experimental-vm-modules\" npx jest",
+    "test:watch": "NODE_OPTIONS=\"$NODE_OPTIONS --experimental-vm-modules\" npx jest --watch"
   },
   "author": "Andre Vale <andreventuravale@gmail.com>",
   "license": "MIT",
