--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@biomejs/biome": "^1.6.4",
     "date-fns": "^3.6.0",
     "jest": "^29.7.0",
+    "jsonpath": "^1.1.1",
     "lodash-es": "^4.17.21",
     "node-fetch": "^3.3.2",
     "testdouble": "^3.20.2"
